@@ -75,6 +75,9 @@ def main(script_file, cmdline):
         parser.add_option("--xvfb", action="store",
                           dest="xvfb", default="Xvfb", metavar="CMD",
                           help="How to run the headless X server (default: '%default')")
+        parser.add_option("--no-randr", action="store_false",
+                          dest="randr", default=True,
+                          help="Disables X11 randr support, xrandr allows the virtual display to be resized to match the client's dimensions (if supported by Xvfb)")
         parser.add_option("--bind-tcp", action="store",
                           dest="bind_tcp", default=None,
                           metavar="[HOST]:PORT",
